test/fail/no-root-page.app
//no root page
application test

define page notRoot() {

}

